--- a/src/main/resources/templates/building/procurement/procurement.html
+++ b/src/main/resources/templates/building/procurement/procurement.html
@@ -18,10 +18,10 @@
 				<div class="select-list gd">
 					<ul>
 						<li>
-							采购人：<input type="text" name="procurementName"/>
+							项目名称：<input type="text" name="loginName"/>
 						</li>
 						<li>
-							材料名称：<input type="text" name="materialsName"/>
+							施工合同编号：<input type="text" name="productNumber"/>
 						</li>
 						<li>
 							<a class="btn btn-primary btn-rounded btn-sm"
@@ -54,7 +54,7 @@
 <script th:inline="javascript">
 	var editFlag = [[${@permissionService.hasPermi('building:product:edit')}]];
 	var removeFlag = [[${@permissionService.hasPermi('building:product:remove')}]];
-	var prefix = ctx + "building/product"
+	var prefix = ctx + "building/procurement"
 
 	$(document).ready(function () {
 		$('body').layout({west__size: 185});
@@ -81,28 +81,28 @@
 					title: '项目ID'
 				},
 				{
-					field: 'productName',
-					title: '项目名称',
+					field: 'procurementName',
+					title: '采购人',
 				},
 				{
-					field: 'productAbbreviation',
-					title: '项目简称'
+					field: 'materialsName',
+					title: '材料名称'
 				},
 				{
-					field: 'productNumber',
-					title: '施工合同编号'
+					field: 'procurementDate',
+					title: '采购日期'
 				},
 				{
-					field: 'productType',
-					title: '项目性质'
+					field: 'unit',
+					title: '单位'
 				},
 				{
-					field: 'productStatus',
-					title: '项目状态'
+					field: 'num',
+					title: '数量'
 				},
 				{
-					field: 'createTime',
-					title: '创建时间'
+					field: 'unitPrice',
+					title: '单价'
 				},
 				{
 					title: '操作',
