--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@
                  <li class="active">
                     <a href="welcome.html"><i class="fa fa-home"></i> <span class="nav-label">主页</span> <span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
-                        <li class="active"><a class="menuItem" th:href="@{/system/main}">了解农村自建房建筑管理系统</a></li>
+                        <li class="active"><a class="menuItem" th:href="@{/system/main}">农村自建房建筑管理系统</a></li>
                     </ul>
                 </li>
                 <li th:each="menu : ${menus}">
@@ -76,20 +76,9 @@
             <nav class="navbar navbar-static-top" role="navigation"
                  style="margin-bottom: 0">
                 <div class="navbar-header">
-
-                    <a class="navbar-minimalize minimalize-styl-2 btn btn-default " href="#" title="收起菜单">
-                    	<i class="fa fa-bars"></i>
-                    </a>
-                    <form role="search" class="navbar-form-custom" method="post" action="">
-                        <div class="form-group">
-                            <input type="text" placeholder="请输入您需要查找的内容 …" class="form-control" name="top-search" id="top-search">
-                        </div>
-                    </form>
+                    <span class="navbar-minimalize minimalize-styl-2" style="font-size:24px">欢迎来到农村自建房建筑管理系统管理</span>
                 </div>
                 <ul class="nav navbar-top-links navbar-right">
-	                <li>
-	                    <span class="m-r-sm text-muted welcome-message">欢迎来到农村自建房建筑管理系统管理后台</span>
-	                </li>
 	                <li><a id="fullScreen"><i class="fa fa-arrows-alt"></i>全屏</a></li>
                     <li><a th:href="@{logout}"><i class="fa fa-sign-out"></i>退出</a></li>
                 </ul>
