--- a/src/main/resources/templates/system/user/profile/edit.html
+++ b/src/main/resources/templates/system/user/profile/edit.html
@@ -33,7 +33,7 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">手机：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="phonenumber" id="phonenumber" th:field="*{phonenumber}">
+					<input class="form-control" type="text" name="phoneNumber" id="phoneNumber" th:field="*{phoneNumber}">
 				</div>
 			</div>
 			<div class="form-group">
@@ -86,7 +86,7 @@
 		                }
 		            }
 				},
-				phonenumber:{
+				phoneNumber:{
 					required:true,
 					isPhone:true,
 		            remote: {
@@ -97,8 +97,8 @@
 		                	"userId": function() {
 		                        return $("input[name='userId']").val();
 		                    },
-		        			"phonenumber": function() {
-		                        return $("input[name='phonenumber']").val();
+		        			"phoneNumber": function() {
+		                        return $("input[name='phoneNumber']").val();
 		                    }
 		                },
 		                dataFilter: function (data, type) {
@@ -112,7 +112,7 @@
 				"email": {
 		            remote: "Email已经存在"
 		        },
-				"phonenumber":{
+				"phoneNumber":{
 		        	remote: "手机号码已经存在"
 				}
 		    },
