--- a/src/main/resources/templates/system/user/profile/profile.html
+++ b/src/main/resources/templates/system/user/profile/profile.html
@@ -42,11 +42,11 @@
 	                        <div class="col-sm-8">
 	                            <h3><strong>[[${user.loginName}]]</strong></h3>
 	                            <p><i class="fa fa-user"></i> [[${user.userName}]] / [[${#strings.defaultString(roleGroup,'无角色')}]]
-	                            <p><i class="fa fa-phone"></i> [[${user.phonenumber}]]</p>
+	                            <p><i class="fa fa-phone"></i> [[${user.phoneNumber}]]</p>
 	                            <p><i class="fa fa-group"></i> [[${user.dept.deptName}]] / [[${#strings.defaultString(postGroup,'无岗位')}]]</p>
 	                            <p><i class="fa fa-transgender"></i> [[${user.sex}]]</p>
 	                            <p><i class="fa fa-envelope-o"></i> [[${user.email}]]</p>
-	                            <p><i class="fa fa-calendar"></i> [[${user.createTimeStr}]]</p>
+	                            <p><i class="fa fa-calendar"></i> [[${user.createTime}]]</p>
 	                        </div>
 	                        <div class="clearfix"></div>
 	                    </a>
@@ -59,21 +59,24 @@
     <div th:include="include::footer"></div>
     <script>
         var userId = [[${user.userId}]];
-	    /*用户信息-修改*/
-	    function edit() {
-	        var url = ctx + "system/user/profile/edit/" + userId;
-	        $.modal.open("修改用户", url);
-	    }
-	    /*用户管理-重置密码*/
-	    function resetPwd() {
-	        var url = ctx + 'system/user/profile/resetPwd/' + userId;
-	        $.modal.open("重置密码", url, '800', '500');
-	    }
-	    /*用户管理-头像*/
-	    function avatar() {
-	        var url = ctx + 'system/user/profile/avatar/' + userId;
-	        $.modal.open("修改头像", url);
-	    }
+
+        /*用户信息-修改*/
+        function edit() {
+            var url = ctx + "system/user/profile/edit/" + userId;
+            $.modal.open("修改用户", url);
+        }
+
+        /*用户管理-重置密码*/
+        function resetPwd() {
+            var url = ctx + 'system/user/profile/resetPwd/' + userId;
+            $.modal.open("重置密码", url, '800', '500');
+        }
+
+        /*用户管理-头像*/
+        function avatar() {
+            var url = ctx + 'system/user/profile/avatar/' + userId;
+            $.modal.open("修改头像", url);
+        }
 	</script>
 </body>
 </html>
