--- a/src/main/resources/templates/system/user/user.html
+++ b/src/main/resources/templates/system/user/user.html
@@ -46,7 +46,7 @@
                             登录名称：<input type="text" name="loginName"/>
                         </li>
                         <li>
-                            手机号码：<input type="text" name="phonenumber"/>
+                            手机号码：<input type="text" name="phoneNumber"/>
                         </li>
                         <li>
                             用户状态：<select name="status"
