--- a/src/main/resources/templates/building/storage/add.html
+++ b/src/main/resources/templates/building/storage/add.html
@@ -7,6 +7,12 @@
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
 		<form class="form-horizontal m" id="form-menu-add">
 			<div class="form-group">
+				<label class="col-sm-3 control-label "><span style="color:red;">*</span> 入库人：</label>
+				<div class="col-sm-8">
+					<input class="form-control" type="text"  id="storageName" name="storageName"/>
+				</div>
+			</div>
+			<div class="form-group">
 				<label class="col-sm-3 control-label"><span style="color:red;">*</span>材料名称：</label>
 				<div class="col-sm-8">
 					<input class="form-control" type="text"  id="materialsName" name="materialsName" />
@@ -19,12 +25,12 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-3 control-label">采购日期：</label>
+				<label class="col-sm-3 control-label">入库日期：</label>
 				<div class="input-group date col-sm-8">
 					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
 					<input type="text" class="form-control" value="2018-04-20" >
 				</div>
-				<input type="hidden" id="finishDate" name="procurementDate" value="" /><br/>
+				<input type="hidden" id="storageDate" name="storageDate" value="" /><br/>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">数量：</label>
@@ -54,7 +60,7 @@
 	<script th:src="@{/ajax/libs/jquery-distpicker/main.js}"></script>
 
 	 <script>
-        var prefix = ctx + "building/stock"
+        var prefix = ctx + "building/storage"
 		$(".input-group.date").datepicker({todayBtn: "linked",keyboardNavigation: !1,forceParse: !1,calendarWeeks: !0,autoclose: !0});
 
 		$("#form-menu-add").validate({
