--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,6 +33,7 @@
                     </div>
                     <div class="m-b"></div>
                     <h4>欢迎使用 <strong>后台管理系统</strong></h4>
+                    <strong id="registration">还没有账号？ <a href="#" >立即注册&raquo;</a></strong>
                 </div>
             </div>
             <div class="col-sm-5">
@@ -72,7 +73,7 @@
 <script src="../static/ajax/libs/layer/layer.min.js" th:src="@{/ajax/libs/layer/layer.min.js}"></script>
 <script src="../static/ajax/libs/iCheck/icheck.min.js" th:src="@{/ajax/libs/iCheck/icheck.min.js}"></script>
 <script src="../static/ajax/libs/blockUI/jquery.blockUI.js" th:src="@{/ajax/libs/blockUI/jquery.blockUI.js}"></script>
-<script src="../static/ruoyi/js/ry-ui.min.js" th:src="@{/ruoyi/js/ry-ui.min.js}"></script>
+<script src="../static/ruoyi/js/ry-ui.min.js" th:src="@{/ruoyi/js/ry-ui.min.js?v=2.1.0}"></script>
 <script src="../static/ruoyi/login.js" th:src="@{/ruoyi/login.js}"></script>
 </body>
 </html>
